# datalake

./: pyproject.toml
config/applications/sample_app/staging/jobs/: cards_balance_job.xml
config/common/lookups/: currency_dim.json
data/: cards_com_bal.csv
data/applications/sample_app/service/: cards_balance_summary.csv
docker/: pipeline-runner.Dockerfile
docs/: Dashboard Prompt  DataLake_Arch.docx  Improvement Plan.txt  Test-Automation-Design.md  high-level-design.md  prompt_design_02.txt  prompt_design_initial copy.txt  prompt_design_initial.txt  prompts-of-high-level-design.md  testing_use_case.txt  validation.txt
libs/: logging_utils.py
libs/connectors/: __init__.py  base.py  csv_connector.py  database_connector.py  hive_connector.py
libs/data_quality/: __init__.py  quarantine.py  rules_engine.py
libs/pipeline_core/: __init__.py  config_loader.py  context.py  models.py  pipeline.py  step_registry.py
libs/transformations/: __init__.py  base.py  utils.py
libs/transformations/aggregate/: aggregate.py
libs/transformations/deduplicate/: deduplicate.py
libs/transformations/join/: join.py
libs/transformations/lookup/: lookup.py
libs/transformations/mask/: mask.py
libs/transformations/merge/: merge.py
libs/transformations/sort/: sort.py
services/: main.py
services/dashboard/static/: dashboard.html
services/orchestrator/: main.py
services/self_service/: main.py
services/self_service/static/: dashboard.html  index.html  selfservice.html
services/workers/: __init__.py  pipeline_runner.py
tests/unit/: test_pipeline_runner.py
(+10 files in other folders)
