[project]
name = "datalake"
version = "0.1.0"
description = "Modular data lake platform implementation derived from high level design"
authors = ["Parveez Shaikh <parveez@example.com>"]
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.19.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "moto>=4.2.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
